@@ -11,6 +11,7 @@ CREATE TABLE SPORT_TYPE (
     ID INTEGER PRIMARY KEY NOT NULL,
     NAME TEXT NOT NULL,
     RECORD_DISTANCE INTEGER NOT NULL,
+    SPEED_MODE TEXT NOT NULL,
     COLOR TEXT NOT NULL,
     ICON TEXT
 );
@@ -31,6 +32,7 @@ CREATE TABLE EQUIPMENT (
     EQUIPMENT_ID INTEGER NOT NULL,
     SPORT_TYPE_ID INTEGER NOT NULL,
     NAME TEXT NOT NULL,
+    NOT_IN_USE INTEGER NOT NULL,
     UNIQUE (EQUIPMENT_ID, SPORT_TYPE_ID),
     FOREIGN KEY (SPORT_TYPE_ID) REFERENCES SPORT_TYPE (ID)
 );
